ui: fix style and layout issues on smaller screens

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -75,4 +75,5 @@ body,
 #root {
   min-height: 100vh;
   width: 100%;
+  min-width: 1024px;
 }
